# excavator_conrtoller

./: CMakeLists.txt  package.xml  read_me.txt
config/: params.yaml
launch/: turtle.launch.py
maps/: path_record copy.csv  path_record.csv
rviz/: odom_and_markers.rviz
scripts/: centerline_markers_node.py  centerline_publisher.py  diff_drive_pure_pursuit_updated_copy.py  excavator_control.code-workspace  joy_multiplex_node.py
